--- a/src/ui/configuration/TerminalConsole.ui
+++ b/src/ui/configuration/TerminalConsole.ui
@@ -139,6 +139,13 @@
       </spacer>
      </item>
      <item>
+      <widget class="QPushButton" name="logsButton">
+       <property name="text">
+        <string>Logs</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="settingsButton">
        <property name="text">
         <string>Adv. Settings</string>
