--- a/src/ui/uas/UASActionsWidget.ui
+++ b/src/ui/uas/UASActionsWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>325</width>
-    <height>406</height>
+    <width>417</width>
+    <height>376</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,32 +22,88 @@
      <property name="enabled">
       <bool>false</bool>
      </property>
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>150</height>
+      </size>
+     </property>
      <property name="maximumSize">
       <size>
        <width>16777215</width>
-       <height>180</height>
+       <height>150</height>
       </size>
      </property>
      <property name="title">
       <string>Mission Controls</string>
      </property>
-     <layout class="QGridLayout" name="gridLayout">
-      <property name="margin">
-       <number>6</number>
-      </property>
-      <item row="4" column="1">
-       <widget class="QPushButton" name="goToWaypointButton">
-        <property name="text">
-         <string>Go To Waypoint</string>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <layout class="QGridLayout" name="gridLayout">
+        <property name="sizeConstraint">
+         <enum>QLayout::SetMaximumSize</enum>
         </property>
-       </widget>
-      </item>
-      <item row="7" column="0" colspan="2">
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <item>
-         <widget class="QSpinBox" name="speedSpinBox"/>
+        <item row="0" column="2">
+         <widget class="QPushButton" name="restartMissionButton">
+          <property name="text">
+           <string>Restart Mission</string>
+          </property>
+         </widget>
         </item>
-        <item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="currentWaypointLabel">
+          <property name="text">
+           <string>Current WP:</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QComboBox" name="waypointListComboBox"/>
+        </item>
+        <item row="1" column="2">
+         <widget class="QPushButton" name="goToWaypointButton">
+          <property name="text">
+           <string>Go To Waypoint</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QComboBox" name="altitudeTypeComboBox"/>
+        </item>
+        <item row="2" column="1">
+         <widget class="QDoubleSpinBox" name="altitudeDoubleSpinBox">
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+          <property name="decimals">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <double>1000.000000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="2">
+         <widget class="QPushButton" name="changeAltitudeButton">
+          <property name="text">
+           <string>Change Altitude</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1">
+         <widget class="QDoubleSpinBox" name="speedDoubleSpinBox">
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+          <property name="decimals">
+           <number>1</number>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="2">
          <widget class="QPushButton" name="changeSpeedButton">
           <property name="text">
            <string>Change Speed</string>
@@ -55,37 +111,6 @@
          </widget>
         </item>
        </layout>
-      </item>
-      <item row="6" column="0" colspan="2">
-       <layout class="QHBoxLayout" name="horizontalLayout_2">
-        <item>
-         <widget class="QSpinBox" name="altitudeSpinBox"/>
-        </item>
-        <item>
-         <widget class="QPushButton" name="changeAltitudeButton">
-          <property name="text">
-           <string>Change Altitude</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item row="4" column="0">
-       <widget class="QComboBox" name="waypointListComboBox"/>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="currentWaypointLabel">
-        <property name="text">
-         <string>Current WP:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QPushButton" name="restartMissionButton">
-        <property name="text">
-         <string>Restart Mission</string>
-        </property>
-       </widget>
       </item>
      </layout>
     </widget>
@@ -100,6 +125,18 @@
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>125</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>125</height>
+      </size>
      </property>
      <property name="title">
       <string>Actions</string>
@@ -207,7 +244,7 @@
      <property name="minimumSize">
       <size>
        <width>0</width>
-       <height>0</height>
+       <height>96</height>
       </size>
      </property>
      <property name="maximumSize">
