Dialog added to AdvParamView to download parameters for Iris - Part 1 (fixed list)

--- a/src/ui/configuration/AdvParameterList.ui
+++ b/src/ui/configuration/AdvParameterList.ui
@@ -95,6 +95,13 @@
          </property>
         </spacer>
        </item>
+       <item>
+        <widget class="QPushButton" name="downloadRemoteButton">
+         <property name="text">
+          <string>Download Param Files</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </item>
     </layout>
