--- a/qgroundcontrol.qrc
+++ b/qgroundcontrol.qrc
@@ -160,6 +160,7 @@
         <file>files/ardupilotmega/images/maggps.png</file>
         <file>files/ardupilotmega/images/px4.jpg</file>
         <file>files/ardupilotmega/images/Pixhawk.png</file>
+        <file>files/vehicles/block_plane/block_plane_0.dae</file>
     </qresource>
     <qresource prefix="/general">
         <file alias="vera.ttf">files/styles/Vera.ttf</file>
