Log to KML button
Add a "Log to KML" button in TerminalConsole to allow
generation of KML/KMZ file from a dataflash log already
on the file system.

When a UI for graphing logs and such is available, the
"Log to KML" button will (should?) be moved there.

--- a/src/ui/configuration/LogConsole.ui
+++ b/src/ui/configuration/LogConsole.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>821</width>
+    <width>864</width>
     <height>295</height>
    </rect>
   </property>
@@ -19,7 +19,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -54,6 +54,19 @@
     </item>
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <spacer name="verticalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>10</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
       <item>
        <widget class="QPushButton" name="selectAllButton">
         <property name="text">
