--- a/src/ui/configuration/TerminalConsole.ui
+++ b/src/ui/configuration/TerminalConsole.ui
@@ -139,6 +139,16 @@
       </spacer>
      </item>
      <item>
+      <widget class="QPushButton" name="logToKmlButton">
+       <property name="toolTip">
+        <string>Pick a dataflash log file to generate a KML/KMZ file from</string>
+       </property>
+       <property name="text">
+        <string>Log to KML...</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="logsButton">
        <property name="text">
         <string>Logs</string>
