--- a/src/ui/MainWindow.ui
+++ b/src/ui/MainWindow.ui
@@ -106,8 +106,8 @@
     <property name="title">
      <string>Views</string>
     </property>
-    <addaction name="actionMissionView"/>
     <addaction name="actionFlightView"/>
+    <addaction name="actionMissionView"/>
     <addaction name="actionHardwareConfig"/>
     <addaction name="actionSoftwareConfig"/>
     <addaction name="actionTerminalView"/>
@@ -291,10 +291,10 @@
      <normaloff>:/files/images/categories/applications-internet.svg</normaloff>:/files/images/categories/applications-internet.svg</iconset>
    </property>
    <property name="text">
-    <string>Flight Data</string>
+    <string>Flight Plan</string>
    </property>
    <property name="shortcut">
-    <string>Meta+O</string>
+    <string>Ctrl+2</string>
    </property>
   </action>
   <action name="actionEngineersView">
@@ -309,7 +309,7 @@
     <string>Plot</string>
    </property>
    <property name="shortcut">
-    <string>Meta+E</string>
+    <string>Ctrl+6</string>
    </property>
   </action>
   <action name="actionMavlinkView">
@@ -345,10 +345,10 @@
      <normaloff>:/files/images/status/network-wireless-encrypted.svg</normaloff>:/files/images/status/network-wireless-encrypted.svg</iconset>
    </property>
    <property name="text">
-    <string>Flight Plan</string>
+    <string>Flight Data</string>
    </property>
    <property name="shortcut">
-    <string>Meta+P</string>
+    <string>Ctrl+1</string>
    </property>
   </action>
   <action name="actionNewCustomWidget">
@@ -485,6 +485,9 @@
    <property name="toolTip">
     <string>Configuration options of the vehicle.</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+3</string>
+   </property>
   </action>
   <action name="actionAdvanced_Mode">
    <property name="checkable">
@@ -517,6 +520,9 @@
    <property name="text">
     <string>Config/Tuning</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+4</string>
+   </property>
    <property name="menuRole">
     <enum>QAction::NoRole</enum>
    </property>
@@ -531,6 +537,9 @@
    </property>
    <property name="text">
     <string>Terminal</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+5</string>
    </property>
   </action>
   <action name="actionDebug_Console">
