--- a/src/ui/MainWindow.ui
+++ b/src/ui/MainWindow.ui
@@ -101,6 +101,8 @@
     <addaction name="actionProject_Roadmap_2"/>
     <addaction name="actionDeveloper_Credits"/>
     <addaction name="actionDebug_Console"/>
+    <addaction name="separator"/>
+    <addaction name="actionAbout_APM_Planner_2_0"/>
    </widget>
    <widget class="QMenu" name="menuPerspectives">
     <property name="title">
@@ -548,6 +550,11 @@
    </property>
    <property name="text">
     <string>Show Debug Console</string>
+   </property>
+  </action>
+  <action name="actionAbout_APM_Planner_2_0">
+   <property name="text">
+    <string>About APM Planner 2.0</string>
    </property>
   </action>
  </widget>
